re #128: Fixed scrollbar in tmpl=component and improved browser support for CSS3 (#filter elements)

--- a/code/administrator/templates/default/css/general.css
+++ b/code/administrator/templates/default/css/general.css
@@ -18,6 +18,10 @@ html, body, #container {
 	min-width: 960px;
 }
 
+#tmpl-component {
+	overflow: auto;
+}
+
 .clr { clear: both; overflow:hidden; height: 0; }
 .group:after {
 	content: ".";
@@ -471,11 +475,52 @@ div.current dd {
 	border-bottom: 1px solid #DDD;
 }
 
-#filter ul 		{ list-style: none; margin: 0; padding: 0; float: left; }
-#filter ul li 	{ float: left; }
-#filter ul li a 	{ display: block; margin: 0 2px; padding: 2px 7px; font-weight: bold; color: #363636; }
-#filter ul li a:hover { background-color: #A0A0A0; color: #FFF; border-radius: 10px; text-decoration: none; }
-#filter ul li.active a { background: #A0A0A0; color: #FFF; border-radius: 10px; -webkit-box-shadow: inset hsla(0, 0%, 20%, 0.8) 0px 1px 2px, white 0 1px 0; }
+#filter ul 		{ 
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	float: left;
+}
+
+#filter ul li 	{ 
+	float: left;
+}
+
+#filter ul li.separator-right {
+	border-right: 1px solid #BBB;
+	padding-right: 10px;
+	margin-right: 10px;
+}
+
+#filter ul li.separator-left {
+	border-left: 1px solid #BBB;
+	padding-left: 10px;
+	margin-left: 10px;
+}
+
+#filter ul li a 	{ 
+	display: block;
+	margin: 0 2px;
+	padding: 2px 7px;
+	font-weight: bold;
+	color: #363636;
+}
+
+#filter ul li a:hover,
+#filter ul li.active a { 
+	text-decoration: none;
+	background: #A0A0A0;
+	color: #FFF;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
+
+#filter ul li.active a { 
+	-webkit-box-shadow: inset hsla(0, 0%, 20%, 0.8) 0px 1px 2px, white 0 1px 0;
+	-moz-box-shadow: inset hsla(0, 0%, 20%, 0.8) 0px 1px 2px, white 0 1px 0; 
+	box-shadow: inset hsla(0, 0%, 20%, 0.8) 0px 1px 2px, white 0 1px 0;
+}
 /* @end */
 
 /* Sidebar */
